# Investigacion_MercadoLibre.co

./: pyproject.toml
Codigos/: Bert_test.ipynb  Bert_test_Mapeo_v2.ipynb  Comentarios_Limpieza.ipynb  Explorar_Data.ipynb  Ext_Info_Productos.ipynb  Extraccion_Final_ML.ipynb  Extraccion_Final_ML_Proxies_UserAgents.ipynb  Extraccion_Final_ML_ScraperAPI.ipynb  LSTM_BiLSTM.ipynb  Limpieza_texto.ipynb  Modelos_CNN.ipynb  Modelos_CNN_Mapeo_v2.ipynb  Modelos_Final.ipynb  productos_scrapeados_final.xlsx  resultados.ipynb  test_ext.ipynb
Codigos/Legacy/: BS_test.ipynb  Mercado_Scraper.py  Mercadolibre_E_1.ipynb  scraper.py  test_example.py  test_note.ipynb
Datos/: Comentarios_tot_raw.txt  DB_Comentarios_Clean.xlsx  DB_Comentarios_ML_Abril17.xlsx  DB_ML_Productos.xlsx  DB_ML_Productos_raw.xlsx  Manual_Final_Ext_Mar6.xlsx  pro_Limpieza (Manual).xlsx  productos_Copia.xlsx  productos_urls_test_ext_scraped_17_Abr.xlsx  productos_urls_test_ext_scraped_25feb.xlsx  respuestas_tot.txt
Datos/Archivos_Tests_Extracciones/: Comentarios_Estructurados.xlsx  Comentarios_Estructurados_p2.xlsx  productos_con_datos_25feb.xlsx  productos_mercadolibre_chanclas_sandalias.xlsx  productos_mercadolibre_chanclas_sandalias_detalles_test.xlsx
Datos/txt/: Comentarios_Limpios_Mar6.txt  Comentarios_tot_raw_abril_17.txt  Preguntas_tot.txt
