[project]
name = "inv-mercadolibre"
version = "0.1.0"
description = "Tratamiento de datos y web scraping"
authors = [
    {name = "carteag43066",email = "carteag43066@universidadean.edu.co"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scrapegraphai (>=1.39.0,<2.0.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ace-tools (>=0.0,<0.1)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
